fix overflow problem on mobile

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -38,9 +38,9 @@ html, body {
     background-color: var(--page-background-color);
     color: $main-font-color;
     font-size: $font-size;
-    overflow-x: hidden;
-    height: auto;
-    background: linear-gradient(180deg, rgba(255, 255, 255, 0) 55.73%, rgba(102, 111, 228, 0.15) 100%);    
+    height: 100%;
+    background: linear-gradient(180deg, rgba(255, 255, 255, 0) 55.73%, rgba(102, 111, 228, 0.15) 100%);
+    
     h3 {
         font-size: 2.0rem;
         color: $main-font-color;
@@ -76,7 +76,7 @@ main {
     z-index: 1;
     .logo_container {
         position: relative;
-        width: 375px;
+        
         border-right: 4px solid #666FE4;
         .expand-collapse {
             position: absolute;
@@ -92,6 +92,11 @@ main {
             display: none;
         }
     }
+
+    @media screen and (min-width: break-iphone-x) {
+        width: 375px;
+    }
+
     &__side {
         width: 100%;
     }
